--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,9 @@ body{
     /* font-family: monospace; */
 }
 
-li{
+/* li{
     font-weight: bold;  
-}
+} */
 form{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
